# desktop-schemas

./: .gitignore  Cargo.toml  GDesktopEnums-3.0.gir  flake.nix  result
gsettings-desktop-schemas/: Cargo.toml  Gir.toml
gsettings-desktop-schemas/src/: lib.rs
gsettings-desktop-schemas/src/auto/: enums.rs  mod.rs  versions.txt
gsettings-desktop-schemas/sys/: Cargo.toml  Gir.toml  build.rs
gsettings-desktop-schemas/sys/src/: lib.rs
gsettings-desktop-schemas/sys/tests/: abi.rs  constant.c  layout.c
