[package]
name = "gsettings-desktop-schemas"
version = "0.3.1"
# authors = ["The Gtk-rs Project Developers"]
categories = ["api-bindings"]
description = "Rust bindings for gsettings-desktop-schemas"
edition = "2018"
keywords = ["gnome", "gtk"]
license = "MIT"
#repository = "https://gitlab.gnome.org/World/Rust/gsettings-desktop-schemas-rs"
repository = "https://gitlab.gnome.org/vlinkz/gsettings-desktop-schemas-rs"

[dependencies]
libc = "0.2"
bitflags = "2.4"
glib = "0.20.9"
ffi = { package = "gsettings-desktop-schemas-sys", path = "./sys", version = "0.3.1" }

[features]
default = []
